--- a/obsidian.css
+++ b/obsidian.css
@@ -268,16 +268,20 @@ h1, h2, h3, h4, h5, h6, strong, b, .view-header-title {
   font-weight: 600;
 }
 
-h1 {
-  color: var(--red)
-}
-
-h2 {
-  color: var(--orange)
-}
-
-h3 {
+h1, cm-header-1 {
   color: var(--purple)
+}
+
+h2, cm-header-2{
+  color: var(--blue)
+}
+
+h3, cm-header-3{
+  color: var(--green)
+}
+
+strong {
+  color: var(--red)
 }
 
 .workspace>.workspace-split>.workspace-leaf:first-of-type:last-of-type .view-header {
